# invariant-python

./: .gitignore  LICENSE  README.md  invariant_python.c  pyproject.toml  setup.py  test_invariant.py
src/invariant_python/: __init__.py  invariants.py
tests/: test_invariants.py
