[project]
name = "invariant_python"
version = "0.1.0"
description = "A library for auto-wrapping methods with invariant checks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"

[project.urls]
"Source Code" = "https://github.com/andreamancuso/invariant-python"

[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"
